--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.5",
   "description": "okami model",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "scripts": {
     "install": "rm -rf .dist && tsc -p .",
     "build": "rm -rf .dist && tsc -p ."
